# holochain-logistics

./: .gitignore  README.md  agent1-conductor-config.toml  agent1-key.txt  agent2-conductor-config.toml  agent2-key.txt  conductor-config.toml  package-lock.json  package.json  run-mac.sh  run-ubuntu.sh  run-windows-gnu.sh  run-windows-msvc.sh
dna-src/test/: index.js  package-lock.json
dna-src/zomes/event/: zome.json
dna-src/zomes/event/code/: .build  Cargo.toml
dna-src/zomes/event/code/src/: lib.rs  utils.rs
dna-src/zomes/event/code/src/anchor/: mod.rs
dna-src/zomes/event/code/src/event/: handlers.rs  mod.rs
dna-src/zomes/event/code/src/inventory/: handlers.rs  mod.rs
dna-src/zomes/event/code/src/member/: handlers.rs  mod.rs
dna-src/zomes/event/code/src/order/: handlers.rs  mod.rs
dna-src/zomes/event/code/src/product/: handlers.rs  mod.rs
ui/: asset-manifest.json  index.html  precache-manifest.384e7c6bc2a3170206da4b4ebf11d732.js  service-worker.js
ui-src/: .eslintrc  package-lock.json  package.json
ui-src/public/: index.html
ui-src/src/: App.js  index.css  index.js
ui-src/src/components/: App.js
ui-src/src/holochain/: index.js  inventory.js  product.js  profile.js
ui-src/src/screens/: Index.js  Inventory.js  Product.js  ProductList.js  Register.js
ui-src/src/state/: inventory.js  product.js
ui-src/src/styles/: styledHtml.js
ui-src/src/util/: constants.js
ui/static/css/: main.36855556.chunk.css  main.36855556.chunk.css.map
ui/static/js/: 1.9a163e91.chunk.js  1.9a163e91.chunk.js.map  main.8dfcbc69.chunk.js  main.8dfcbc69.chunk.js.map
(+28 files in other folders)
