[package]
  name = "event"
  version = "0.1.0"
  authors = ["willem <willemolding@gmail.com>"]
  edition = "2018"

[dependencies]
  serde = {version = "1.0.89", features = ["derive"]}
  serde_derive = "1.0.89"
  serde_json = "1.0.39"
  hdk = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.6-alpha"}
  holochain_wasm_utils = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.6-alpha"}
  holochain_core_types_derive = {git = "https://github.com/holochain/holochain-rust", tag = "v0.0.6-alpha"}

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]